2022-03-01

  * Update for 0ad engine v0.0.26
  * release v0.26.0