@@ -1,21 +1,0 @@
-{
-	"genericName": "Baskets",
-	"description": "Workers use baskets. Increases shuttling capacity for all resources.",
-	"cost": {
-		"food": 0,
-		"wood": 0
-	},
-	"requirements": { "tech": "phase_village" },
-	"requirementsTooltip": "Unlocked in Village Phase.",
-	"icon": "gather_basket_empty.png",
-	"researchTime": 5,
-	"tooltip": "Workers +15 resource capacity.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Capacities/food", "add": 15 },
-		{ "value": "ResourceGatherer/Capacities/wood", "add": 15 },
-		{ "value": "ResourceGatherer/Capacities/stone", "add": 15 },
-		{ "value": "ResourceGatherer/Capacities/metal", "add": 15 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
