@@ -1,22 +1,0 @@
-{
-	"genericName": "Horse-drawn Carts",
-	"description": "Workers use horse-drawn carts. Increases shuttling capacity for all resources.",
-	"cost": {
-		"food": 600,
-		"wood": 600
-	},
-	"supersedes": "gather_capacity_wheelbarrow",
-	"requirements": { "tech": "phase_city" },
-	"requirementsTooltip": "Unlocked in City Phase.",
-	"icon": "handcart_empty.png",
-	"researchTime": 60,
-	"tooltip": "Workers +5 resource capacity.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Capacities/food", "add": 5 },
-		{ "value": "ResourceGatherer/Capacities/wood", "add": 5 },
-		{ "value": "ResourceGatherer/Capacities/stone", "add": 5 },
-		{ "value": "ResourceGatherer/Capacities/metal", "add": 5 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
