@@ -1,19 +1,0 @@
-{
-	"genericName": "Fertilizer",
-	"description": "Extra nutrients for farms.",
-	"cost": {
-		"wood": 400,
-		"metal": 300
-	},
-	"supersedes": "gather_farming_training",
-	"requirements": { "tech": "phase_city" },
-	"requirementsTooltip": "Unlocked in City Phase.",
-	"icon": "olives.png",
-	"researchTime": 60,
-	"tooltip": "Workers +20% grain gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/food.grain", "multiply": 1.2 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
