@@ -1,18 +1,0 @@
-{
-	"genericName": "Iron Plow",
-	"description": "Equip your workers with iron plows, animal-drawn instruments to turn the sod.",
-	"cost": {
-		"wood": 0,
-		"metal": 0
-	},
-	"requirements": { "tech": "phase_village" },
-	"requirementsTooltip": "Unlocked in Village Phase.",
-	"icon": "plow.png",
-	"researchTime": 5,
-	"tooltip": "Workers +75% grain gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/food.grain", "multiply": 1.75 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
