@@ -1,19 +1,0 @@
-{
-	"genericName": "Gather Training",
-	"description": "Training for workers to increase farm gathering speed.",
-	"cost": {
-		"wood": 300,
-		"metal": 200
-	},
-	"supersedes": "gather_farming_plows",
-	"requirements": { "tech": "phase_town" },
-	"requirementsTooltip": "Unlocked in Town Phase.",
-	"icon": "farming_training.png",
-	"researchTime": 50,
-	"tooltip": "Workers +20% grain gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/food.grain", "multiply": 1.2 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
