@@ -1,18 +1,0 @@
-{
-	"genericName": "Iron Axe Heads",
-	"description": "Increases wood gathering rates for trees.",
-	"cost": {
-		"wood": 0,
-		"metal": 0
-	},
-	"requirements": { "tech": "phase_village" },
-	"requirementsTooltip": "Unlocked in Village Phase.",
-	"icon": "wood_axe_01.png",
-	"researchTime": 5,
-	"tooltip": "Workers +95% wood gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/wood.tree", "multiply": 1.95 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
