@@ -1,19 +1,0 @@
-{
-	"genericName": "Sharp Axe Heads",
-	"description": "Increases wood gathering rates for trees.",
-	"cost": {
-		"wood": 600,
-		"metal": 300
-	},
-	"supersedes": "gather_lumbering_strongeraxes",
-	"requirements": { "tech": "phase_city" },
-	"requirementsTooltip": "Unlocked in City Phase.",
-	"icon": "wood_axe_03.png",
-	"researchTime": 60,
-	"tooltip": "Workers +25% wood gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/wood.tree", "multiply": 1.25 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
