@@ -1,19 +1,0 @@
-{
-	"genericName": "Stronger Axe",
-	"description": "Increases wood gathering rates for trees.",
-	"cost": {
-		"wood": 400,
-		"metal": 200
-	},
-	"supersedes": "gather_lumbering_ironaxes",
-	"requirements": { "tech": "phase_town" },
-	"requirementsTooltip": "Unlocked in Town Phase.",
-	"icon": "wood_axe_02.png",
-	"researchTime": 50,
-	"tooltip": "Workers +25% wood gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/wood.tree", "multiply": 1.25 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
