@@ -1,22 +1,0 @@
-{
-	"genericName": "Serfs",
-	"specificName": {
-		"spart": "Heilōtes"
-	},
-	"description": "Compel serfs to help your workers quarry stone. Increases stone gathering rates.",
-	"cost": {
-		"food": 400,
-		"stone": 200
-	},
-	"supersedes": "gather_mining_servants",
-	"requirements": { "tech": "phase_town" },
-	"requirementsTooltip": "Unlocked in Town Phase.",
-	"icon": "mining_stone_02.png",
-	"researchTime": 50,
-	"tooltip": "Workers +25% stone gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/stone.rock", "multiply": 1.25 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
