@@ -1,19 +1,0 @@
-{
-	"genericName": "Shaft Mining",
-	"description": "Develop shaft mining. Increases metal gathering rates.",
-	"cost": {
-		"food": 400,
-		"stone": 200
-	},
-	"supersedes": "gather_mining_wedgemallet",
-	"requirements": { "tech": "phase_town" },
-	"requirementsTooltip": "Unlocked in Town Phase.",
-	"icon": "mining_metal_02.png",
-	"researchTime": 50,
-	"tooltip": "Workers +25% metal gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/metal.ore", "multiply": 1.25 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
