@@ -1,23 +1,0 @@
-{
-	"genericName": "Silver Mining",
-	"specificName": {
-		"athen": "Mines of Laureion",
-		"mace": "Mines of Krenides"
-	},
-	"description": "Strike a vein of precious silver. Increases metal gathering rates.",
-	"cost": {
-		"food": 600,
-		"stone": 300
-	},
-	"supersedes": "gather_mining_shaftmining",
-	"requirements": { "tech": "phase_city" },
-	"requirementsTooltip": "Unlocked in City Phase.",
-	"icon": "mining_metal_03.png",
-	"researchTime": 60,
-	"tooltip": "Workers +25% metal gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/metal.ore", "multiply": 1.25 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
