@@ -1,27 +1,0 @@
-{
-	"genericName": "Slaves",
-	"specificName": {
-		"athen": "Andrapoda",
-		"mace": "Andrapoda",
-		"ptol": "Andrapoda",
-		"rome": "Servi",
-		"sele": "Andrapoda",
-		"spart": "Andrapoda"
-	},
-	"description": "Buy slaves to help your workers quarry stone. Increases stone gathering rates.",
-	"cost": {
-		"food": 600,
-		"stone": 300
-	},
-	"supersedes": "gather_mining_serfs",
-	"requirements": { "tech": "phase_city" },
-	"requirementsTooltip": "Unlocked in City Phase.",
-	"icon": "mining_stone_03.png",
-	"researchTime": 60,
-	"tooltip": "Workers +25% stone gather rate.",
-	"modifications": [
-		{ "value": "ResourceGatherer/Rates/stone.rock", "multiply": 1.25 }
-	],
-	"affects": ["Worker"],
-	"soundComplete": "interface/alarm/alarm_upgradearmory.xml"
-}
