@@ -36,13 +36,7 @@
   </Loot>
   <ProductionQueue/>
   <RallyPoint disable=""/>
-  <Researcher>
-    <Technologies datatype="tokens">
-      gather_wicker_baskets
-      gather_farming_plows
-      gather_farming_harvester
-    </Technologies>
-  </Researcher>
+  <Researcher/>
   <ResourceDropsite>
     <Types>food</Types>
     <Sharable>true</Sharable>
