@@ -1,3 +1,7 @@
+2022-06-30
+
+  * Increased capacity and gather rates are now the default (no upgrades needed)
+
 2022-03-01
 
   * Update for 0ad engine v0.0.26
